[package]
name = "xiff"
version = "0.0.1"
license = "MIT"
authors = ["Anna Scholtz <anna@scholtzan.net>"]
description = "A plugin to show file changes in xi-editor"
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
git2 = "0.8"
diff = "0.1.11"

[dependencies.xi-plugin-lib]
path = "../xi-mac/xi-editor/rust/plugin-lib"

[dependencies.xi-core-lib]
path = "../xi-mac/xi-editor/rust/core-lib"

[dependencies.xi-rope]
path = "../xi-mac/xi-editor/rust/rope"

[dependencies.xi-trace]
path = "../xi-mac/xi-editor/rust/trace"
